<resources>
    <string name="app_name">Handy Buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find">Find</string>
    <string name="chat">Chat</string>
    <string name="saved">Saved</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="technician_profile_image">Technician profile image</string>
    <string name="connection_error">Connection error!\n</string>
    <string name="full_name_technician">%1$s %2$s</string>
    <string name="technician_name_placeholder">Name</string>
    <string name="rating_placeholder">Rating</string>
    <string name="specialities_placeholder">Specialities</string>
    <string name="profile_image">Profile Image</string>
    <string name="item_placeholder">Item</string>
    <string name="go_to_detail">Go to detail</string>
    <string name="option_placeholder">Option</string>
    <string name="name_placeholder">Name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="app_tittle">Handy Buddy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="email_not_verified">Please verify your email to continue</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_required">Password is required</string>
    <string name="invalid_long_password">Password must be at least 6 characters</string>
    <string name="error_wrong_password">Invalid password</string>
    <string name="error_account_exists_with_different_credential">An account already exists with the same email but different sign-in credentials</string>
    <string name="error_email_already_in_use">This email is already in use by another account</string>
    <string name="error_user_token_expired">Session has expired. Please log in again</string>
    <string name="error_user_not_found">User not found with the provided information</string>
    <string name="error_weak_password">The password provided is too weak</string>
    <string name="error_no_network">No network or connection was interrupted</string>
    <string name="error_authentication_failed">Authentication failed</string>
    <string name="verification_email_sent">Verification email has been sent</string>
    <string name="verification_email_failed">We couldn’t send the verification email. Please try again later.</string>
    <string name="login_successful">Login successful!</string>
    <string name="reset_password">Reset password</string>
    <string name="write_email">Enter your email to receive the password reset link.</string>
    <string name="send">Send</string>
    <string name="link_sent">The password reset link has been sent.</string>
    <string name="link_not_sent">Failed to send the reset link. Please try again later.</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="verification_email_not_sent">Failed to send verification email</string>
    <string name="user_created">User created successfully!</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="unknown_error">Unknown error</string>
    <string name="success_logout">Logged out successfully</string>
    <string name="find_technician">Find technician...</string>
    <string name="available_technicians">Available Technicians</string>
    <string name="type_a_message">Type a message</string>
    <string name="empty_chats">Looks like your inbox is empty.\nOnce you start chatting, your conversations will appear here.</string>
    <string name="technician_default_name">Unknown</string>
    <string name="technician_name">Technician Name</string>
    <string name="error_email_required">Email is required.</string>
    <string name="error_email_invalid">Please enter a valid email address.</string>
    <string name="error_password_required">Password is required.</string>
    <string name="error_password_too_short">Password must be at least 6 characters long.</string>
    <string name="error_password_uppercase">Password must contain at least one uppercase letter.</string>
    <string name="error_password_lowercase">Password must contain at least one lowercase letter.</string>
    <string name="error_password_digit">Password must contain at least one number.</string>
    <string name="error_password_special">Password must contain at least one special character.</string>
    <string name="error_input_required">This field cannot be empty.</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
</resources>