<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/loading_anim"
        android:indeterminateDuration="1500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="170dp"
            android:paddingBottom="48dp">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_tittle"
                android:textColor="@color/colorPrimaryVariant"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingBottom="32dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/colorOnPrimary"
                app:boxStrokeColor="@color/colorOnSecondary"
                app:endIconMode="clear_text"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:textColor="@color/textInput"
                    android:textColorHint="@color/colorOnSecondary"
                    android:paddingTop="24dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/colorOnPrimary"
                app:boxStrokeColor="@color/colorOnSecondary"
                app:endIconMode="password_toggle"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:textColor="@color/textInput"
                    android:textColorHint="@color/colorOnSecondary"
                    android:paddingTop="24dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorOnSecondary"
                android:textSize="14sp"
                android:layout_gravity="end"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:padding="12dp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:id="@+id/tvEmailNotVerified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_not_verified"
                android:textColor="#856404"
                android:textSize="14sp"
                android:gravity="center"
                android:visibility="gone"
                android:background="@drawable/warning_bg"
                android:layout_marginBottom="8dp" />

            <Button
                android:id="@+id/btnReenviarVerificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resend_verification_email"
                android:backgroundTint="@color/colorSecondary"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:padding="10dp"
                android:visibility="gone"
                android:layout_marginBottom="24dp" />


            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/textInput"
                android:textSize="14sp"
                android:gravity="center" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
