<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/technicianElement"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_border_ripple"
    android:paddingHorizontal="12dp"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/technician_profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/technician_name_placeholder"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ivProfile"
        app:layout_constraintStart_toStartOf="@id/ivProfile"
        app:layout_constraintTop_toBottomOf="@id/ivProfile" />

    <LinearLayout
        android:id="@+id/infoContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@+id/guideline_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rbRating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3.5"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:text="@string/rating_placeholder"
                android:paddingHorizontal="15dp"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSpecialities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/specialities_placeholder" />
    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="87dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
